--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "description": "Unicode Snowman",
   "activationEvents": ["☃:toggle"],
-  "repository": "https://github.com/rgbkrk/☃",
+  "repository": "https://github.com/rgbkrk/-",
   "license": "MIT",
   "engines": {
     "atom": ">0.50.0"
