--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "☃",
   "main": "./lib/☃",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "Unicode Snowman",
-  "activationEvents": ["☃:toggle"],
+  "activationEvents": [
+    "☃:toggle"
+  ],
   "repository": "https://github.com/rgbkrk/-",
   "license": "MIT",
   "engines": {
     "atom": ">0.50.0"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
